fix notebooks to be openable in github

--- a/demos/uncertainty_experiment.ipynb
+++ b/demos/uncertainty_experiment.ipynb
@@ -2,15 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-22T08:40:46.975439171Z",
-     "start_time": "2024-01-22T08:40:46.930919323Z"
+     "end_time": "2024-04-16T09:36:46.920291Z",
+     "start_time": "2024-04-16T09:36:44.625239Z"
     }
    },
+   "source": [
+    "import json\n",
+    "\n",
+    "from enbios.bw2.util import report\n",
+    "\n",
+    "report()"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -20,153 +26,153 @@
       "[]\n",
       "Project: ecoinvent_391\n",
       "['biosphere3', 'ecoinvent_391_cutoff']\n",
+      "Project: Spain case study\n",
+      "['biosphere', 'food']\n",
+      "Project: supply chain graph\n",
+      "['bike']\n",
+      "Project: matrix-test\n",
+      "['db']\n",
       "Project: nonlinear-method-test\n",
       "['db']\n",
-      "Project: Spain case study\n",
-      "['biosphere', 'food']\n"
+      "Project: ecoinvent_391_apos\n",
+      "['biosphere3', 'ecoinvent_391_apos']\n",
+      "Project: 1\n",
+      "[]\n",
+      "Project: ecoinvent_391_consequential\n",
+      "['biosphere3', 'ecoinvent_391_consequential']\n",
+      "Project: super_simple_builder_test\n",
+      "['db']\n",
+      "Project: builder_test\n",
+      "['db']\n",
+      "Project: ppp\n",
+      "['db']\n",
+      "Project: \n",
+      "[]\n",
+      "Project: seed_import\n",
+      "['biosphere3', 'ecoi39co', 'batteries', 'PV', 'cobalt']\n",
+      "Project: bw_temporalis example\n",
+      "['example']\n",
+      "Project: lci-model\n",
+      "[]\n",
+      "Project: test-del\n",
+      "['db']\n",
+      "Project: lci_model\n",
+      "['biosphere3', 'cutoff391', 'new_db']\n",
+      "Project: LIVENreg_ei_391_con\n",
+      "['biosphere3', 'ei391cutoff']\n"
      ]
     }
    ],
-   "source": [
-    "import json\n",
-    "\n",
-    "from enbios.bw2.util import report\n",
-    "\n",
-    "report()"
-   ]
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "BRIGHTWAY_PROJECT = \"ecoinvent_391\""
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-22T08:40:47.457617043Z",
-     "start_time": "2024-01-22T08:40:47.455308275Z"
+     "end_time": "2024-04-16T09:36:48.074611Z",
+     "start_time": "2024-04-16T09:36:48.070382Z"
     }
    },
    "id": "1189b6bea0407463",
-   "execution_count": 9
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "experiment_data = json.load(open(\"data/uncertainty_experiment_data.json\"))\n",
     "# set the bw project to one that has ecoinvent 3.9.1 datasets\n",
-    "experiment_data[\"adapters\"][0][\"config\"][\"bw_project\"] = \"----------------\""
+    "experiment_data[\"adapters\"][0][\"config\"][\"bw_project\"] = BRIGHTWAY_PROJECT\n",
+    "# samples of the k-distributions:\n",
+    "experiment_data[\"adapters\"][0][\"config\"][\"use_k_bw_distributions\"] = 5"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-22T08:50:33.415367663Z",
-     "start_time": "2024-01-22T08:50:33.372981658Z"
+     "end_time": "2024-04-16T09:36:48.680569Z",
+     "start_time": "2024-04-16T09:36:48.673986Z"
     }
    },
    "id": "6d3103743605c287",
-   "execution_count": 30
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
+   "source": [
+    "from enbios.base.experiment import Experiment\n",
+    "\n",
+    "exp = Experiment(experiment_data)\n",
+    "exp"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-16T09:36:50.439124Z",
+     "start_time": "2024-04-16T09:36:49.217892Z"
+    }
+   },
+   "id": "8163df7005a1e1be",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Experiment: (call info() for details)\n",
+       "Structural nodes: 6\n",
+       "Methods: 2\n",
+       "Hierarchy (depth): 4\n",
+       "Scenarios: 1"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-16T09:38:12.555875Z",
+     "start_time": "2024-04-16T09:36:50.440843Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "result = exp.run()",
+   "id": "80e3e479007b1dd5",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-01-22 09:50:34,264 - ............enbios.demos.enbios.base.adapters_aggregators.builtin - WARNING - Cannot aggregate output to parent: Thermal_generation. From earlier children the base unit is 2842897593.0081835 kilogram and from chp_biofuel_extraction__heat it is 941785.54105752 megajoule. Cannot convert from 'kilogram' ([mass]) to 'megajoule' ([length] ** 2 * [mass] / [time] ** 2)\n",
-      "2024-01-22 09:50:34,265 - ............enbios.demos.enbios.base.adapters_aggregators.builtin - WARNING - Scenario: '0': No output for node: 'Thermal_generation' (lvl: 2). Not calculating any upper nodes.\n",
-      "2024-01-22 09:50:34,266 - ............enbios.demos.enbios.base.adapters_aggregators.builtin - WARNING - Cannot aggregate output to parent: ConversionsT. From earlier children the base unit is 226141452.37025702 kilogram and from biofuel_to_methane__methane it is 240964492.04181156 meter ** 3. Cannot convert from 'kilogram' ([mass]) to 'meter ** 3' ([length] ** 3)\n",
-      "2024-01-22 09:50:34,266 - ............enbios.demos.enbios.base.adapters_aggregators.builtin - WARNING - Scenario: '0': No output for node: 'ConversionsT' (lvl: 2). Not calculating any upper nodes.\n",
-      "2024-01-22 09:50:34,267 - ............enbios.demos.enbios.base.adapters_aggregators.builtin - WARNING - Scenario: '0': No output for node: 'Conversions' (lvl: 1). Not calculating any upper nodes.\n",
-      "2024-01-22 09:50:34,267 - ............enbios.demos.enbios.base - INFO - Running scenario '0'\n",
-      "2024-01-22 09:50:34,271 - ............enbios.demos.ADAPTER::(brightway-adapter) - INFO - Brightway adapter: Run distribution 0/5\n",
-      "2024-01-22 09:50:34,943 - ............enbios.demos.ADAPTER::(brightway-adapter) - INFO - {'message': 'Started MultiLCA calculation', 'methods': [('ReCiPe 2016 v1.03, midpoint (H)', 'climate change', 'global warming potential (GWP1000)'), ('Ecological Scarcity 2021', 'emissions to water', 'water pollutants')], 'functional units': [[{'database': 'ecoinvent_391_cutoff', 'code': '81174ec2c20931c1a36f65c654bbd11e', 'amount': 57514890465.62103}], [{'database': 'ecoinvent_391_cutoff', 'code': '46839adbc3cf15621ddbbe687eaa6df1', 'amount': 1142566.6357662922}], [{'database': 'ecoinvent_391_cutoff', 'code': 'f1cc5e0b69dcd3bdb2c6a4d393521a65', 'amount': 2842897593.0081835}], [{'database': 'ecoinvent_391_cutoff', 'code': '413bc4617794c6e8b07038dbeca64adb', 'amount': 941785.54105752}], [{'database': 'ecoinvent_391_cutoff', 'code': '3a6586952eff793738eef72743703e90', 'amount': 226141452.37025702}], [{'database': 'ecoinvent_391_cutoff', 'code': '7d82a9b0a28dc30058260b5c68fbad95', 'amount': 240964492.04181156}]]}\n",
-      "2024-01-22 09:50:42,735 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 0/6\n",
-      "2024-01-22 09:50:51,124 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 1/6\n",
-      "2024-01-22 09:50:57,807 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 2/6\n",
-      "2024-01-22 09:51:04,893 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 3/6\n",
-      "2024-01-22 09:51:15,088 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 4/6\n",
-      "2024-01-22 09:51:21,615 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 5/6\n",
-      "2024-01-22 09:51:32,715 - ............enbios.demos.ADAPTER::(brightway-adapter) - INFO - Brightway adapter: Run distribution 1/5\n",
-      "2024-01-22 09:51:33,512 - ............enbios.demos.ADAPTER::(brightway-adapter) - INFO - {'message': 'Started MultiLCA calculation', 'methods': [('ReCiPe 2016 v1.03, midpoint (H)', 'climate change', 'global warming potential (GWP1000)'), ('Ecological Scarcity 2021', 'emissions to water', 'water pollutants')], 'functional units': [[{'database': 'ecoinvent_391_cutoff', 'code': '81174ec2c20931c1a36f65c654bbd11e', 'amount': 57514890465.62103}], [{'database': 'ecoinvent_391_cutoff', 'code': '46839adbc3cf15621ddbbe687eaa6df1', 'amount': 1142566.6357662922}], [{'database': 'ecoinvent_391_cutoff', 'code': 'f1cc5e0b69dcd3bdb2c6a4d393521a65', 'amount': 2842897593.0081835}], [{'database': 'ecoinvent_391_cutoff', 'code': '413bc4617794c6e8b07038dbeca64adb', 'amount': 941785.54105752}], [{'database': 'ecoinvent_391_cutoff', 'code': '3a6586952eff793738eef72743703e90', 'amount': 226141452.37025702}], [{'database': 'ecoinvent_391_cutoff', 'code': '7d82a9b0a28dc30058260b5c68fbad95', 'amount': 240964492.04181156}]]}\n",
-      "2024-01-22 09:51:44,941 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 0/6\n",
-      "2024-01-22 09:51:51,440 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 1/6\n",
-      "2024-01-22 09:52:01,579 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 2/6\n",
-      "2024-01-22 09:52:12,802 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 3/6\n",
-      "2024-01-22 09:52:18,452 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 4/6\n",
-      "2024-01-22 09:52:26,499 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 5/6\n",
-      "2024-01-22 09:52:35,414 - ............enbios.demos.ADAPTER::(brightway-adapter) - INFO - Brightway adapter: Run distribution 2/5\n",
-      "2024-01-22 09:52:36,076 - ............enbios.demos.ADAPTER::(brightway-adapter) - INFO - {'message': 'Started MultiLCA calculation', 'methods': [('ReCiPe 2016 v1.03, midpoint (H)', 'climate change', 'global warming potential (GWP1000)'), ('Ecological Scarcity 2021', 'emissions to water', 'water pollutants')], 'functional units': [[{'database': 'ecoinvent_391_cutoff', 'code': '81174ec2c20931c1a36f65c654bbd11e', 'amount': 57514890465.62103}], [{'database': 'ecoinvent_391_cutoff', 'code': '46839adbc3cf15621ddbbe687eaa6df1', 'amount': 1142566.6357662922}], [{'database': 'ecoinvent_391_cutoff', 'code': 'f1cc5e0b69dcd3bdb2c6a4d393521a65', 'amount': 2842897593.0081835}], [{'database': 'ecoinvent_391_cutoff', 'code': '413bc4617794c6e8b07038dbeca64adb', 'amount': 941785.54105752}], [{'database': 'ecoinvent_391_cutoff', 'code': '3a6586952eff793738eef72743703e90', 'amount': 226141452.37025702}], [{'database': 'ecoinvent_391_cutoff', 'code': '7d82a9b0a28dc30058260b5c68fbad95', 'amount': 240964492.04181156}]]}\n",
-      "2024-01-22 09:52:44,770 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 0/6\n",
-      "2024-01-22 09:52:55,823 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 1/6\n",
-      "2024-01-22 09:53:03,886 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 2/6\n",
-      "2024-01-22 09:53:11,866 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 3/6\n",
-      "2024-01-22 09:53:23,247 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 4/6\n",
-      "2024-01-22 09:53:32,789 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 5/6\n",
-      "2024-01-22 09:53:40,504 - ............enbios.demos.ADAPTER::(brightway-adapter) - INFO - Brightway adapter: Run distribution 3/5\n",
-      "2024-01-22 09:53:41,246 - ............enbios.demos.ADAPTER::(brightway-adapter) - INFO - {'message': 'Started MultiLCA calculation', 'methods': [('ReCiPe 2016 v1.03, midpoint (H)', 'climate change', 'global warming potential (GWP1000)'), ('Ecological Scarcity 2021', 'emissions to water', 'water pollutants')], 'functional units': [[{'database': 'ecoinvent_391_cutoff', 'code': '81174ec2c20931c1a36f65c654bbd11e', 'amount': 57514890465.62103}], [{'database': 'ecoinvent_391_cutoff', 'code': '46839adbc3cf15621ddbbe687eaa6df1', 'amount': 1142566.6357662922}], [{'database': 'ecoinvent_391_cutoff', 'code': 'f1cc5e0b69dcd3bdb2c6a4d393521a65', 'amount': 2842897593.0081835}], [{'database': 'ecoinvent_391_cutoff', 'code': '413bc4617794c6e8b07038dbeca64adb', 'amount': 941785.54105752}], [{'database': 'ecoinvent_391_cutoff', 'code': '3a6586952eff793738eef72743703e90', 'amount': 226141452.37025702}], [{'database': 'ecoinvent_391_cutoff', 'code': '7d82a9b0a28dc30058260b5c68fbad95', 'amount': 240964492.04181156}]]}\n",
-      "2024-01-22 09:53:49,686 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 0/6\n",
-      "2024-01-22 09:53:57,697 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 1/6\n",
-      "2024-01-22 09:54:03,692 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 2/6\n",
-      "2024-01-22 09:54:09,991 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 3/6\n",
-      "2024-01-22 09:54:15,795 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 4/6\n",
-      "2024-01-22 09:54:24,642 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 5/6\n",
-      "2024-01-22 09:54:30,811 - ............enbios.demos.ADAPTER::(brightway-adapter) - INFO - Brightway adapter: Run distribution 4/5\n",
-      "2024-01-22 09:54:31,522 - ............enbios.demos.ADAPTER::(brightway-adapter) - INFO - {'message': 'Started MultiLCA calculation', 'methods': [('ReCiPe 2016 v1.03, midpoint (H)', 'climate change', 'global warming potential (GWP1000)'), ('Ecological Scarcity 2021', 'emissions to water', 'water pollutants')], 'functional units': [[{'database': 'ecoinvent_391_cutoff', 'code': '81174ec2c20931c1a36f65c654bbd11e', 'amount': 57514890465.62103}], [{'database': 'ecoinvent_391_cutoff', 'code': '46839adbc3cf15621ddbbe687eaa6df1', 'amount': 1142566.6357662922}], [{'database': 'ecoinvent_391_cutoff', 'code': 'f1cc5e0b69dcd3bdb2c6a4d393521a65', 'amount': 2842897593.0081835}], [{'database': 'ecoinvent_391_cutoff', 'code': '413bc4617794c6e8b07038dbeca64adb', 'amount': 941785.54105752}], [{'database': 'ecoinvent_391_cutoff', 'code': '3a6586952eff793738eef72743703e90', 'amount': 226141452.37025702}], [{'database': 'ecoinvent_391_cutoff', 'code': '7d82a9b0a28dc30058260b5c68fbad95', 'amount': 240964492.04181156}]]}\n",
-      "2024-01-22 09:54:38,845 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 0/6\n",
-      "2024-01-22 09:54:45,300 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 1/6\n",
-      "2024-01-22 09:54:51,754 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 2/6\n",
-      "2024-01-22 09:54:58,788 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 3/6\n",
-      "2024-01-22 09:55:09,398 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 4/6\n",
-      "2024-01-22 09:55:16,745 - ............enbios.demos.ADAPTER::(brightway-adapter) - DEBUG - Demand 5/6\n"
+      "2024-04-16 11:36:50,441 - ............demos.enbios.base - INFO - Running scenario '0'\n"
      ]
     }
    ],
-   "source": [
-    "from enbios.base.experiment import Experiment\n",
-    "\n",
-    "exp = Experiment(experiment_data)\n",
-    "result = exp.run()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-22T08:55:25.134304915Z",
-     "start_time": "2024-01-22T08:50:34.149995645Z"
-    }
-   },
-   "id": "8163df7005a1e1be",
-   "execution_count": 31
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "import pickle\n",
-    "\n",
+    "# store the experiment for later use\n",
     "pickle.dump(exp, open(\"data/uncertainty_experiment.pickle\", \"wb\"))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-22T08:56:46.034536458Z",
-     "start_time": "2024-01-22T08:56:46.026412882Z"
+     "end_time": "2024-04-16T09:38:12.573276Z",
+     "start_time": "2024-04-16T09:38:12.557923Z"
     }
    },
    "id": "175f764550523bb4",
-   "execution_count": 32
-  },
-  {
-   "cell_type": "code",
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "9bd8c8921436893c"
+   "execution_count": 6
   }
  ],
  "metadata": {
