--- a/demos/bw_adapter_config.ipynb
+++ b/demos/bw_adapter_config.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "bw_test_non_linear_methods_module_path = \"data/bw_test_non_linear_methods_module.py\"\n",
     "\n",
@@ -89,36 +88,16 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T11:15:29.972487723Z",
-     "start_time": "2024-02-20T11:15:29.971636363Z"
+     "end_time": "2024-04-16T09:21:19.643682Z",
+     "start_time": "2024-04-16T09:21:19.634409Z"
     }
    },
    "id": "b8b8855393292e65",
+   "outputs": [],
    "execution_count": 1
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Excluding 0 filtered results\n",
-      "Excluding 104 filtered results\n",
-      "2024-02-20 12:15:39,237 - ............demos.enbios.base - INFO - Running scenario 'default scenario'\n",
-      "2024-02-20 12:15:39,286 - ............demos.ADAPTER::(brightway-adapter) - INFO - Brightway adapter: Run distribution 1/2\n",
-      "2024-02-20 12:16:02,015 - ............demos.ADAPTER::(brightway-adapter) - INFO - Brightway adapter: Run distribution 2/2\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "{'default scenario': {'name': 'root',\n  'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n    'magnitude': 0.0,\n    'multi_magnitude': [1.5789588785465283, 1.5755093771663236]}},\n  'output': {'unit': 'kilowatt_hour', 'magnitude': 1.0},\n  'children': [{'name': 'single_activity',\n    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n      'multi_magnitude': [1.5789588785465283, 1.5755093771663236]}},\n    'output': {'unit': 'kilowatt_hour', 'magnitude': 1.0}}]}}"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "from enbios.base.experiment import Experiment\n",
     "\n",
@@ -128,102 +107,140 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T11:16:22.104865322Z",
-     "start_time": "2024-02-20T11:15:35.963608854Z"
+     "end_time": "2024-04-16T09:22:04.673375Z",
+     "start_time": "2024-04-16T09:21:20.321206Z"
     }
    },
    "id": "e1c866cd74d55594",
-   "execution_count": 2
-  },
-  {
-   "cell_type": "code",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'default scenario': [array([[1.57895888]]), array([[1.57550938]])]}\n"
+      "Excluding 0 filtered results\n",
+      "Excluding 104 filtered results\n",
+      "2024-04-16 11:21:23,628 - ............demos.enbios.base - INFO - Running scenario 'default scenario'\n",
+      "2024-04-16 11:21:23,682 - ............demos.(brightway-adapter) - INFO - Brightway adapter: Run distribution 1/2\n",
+      "2024-04-16 11:21:44,774 - ............demos.(brightway-adapter) - INFO - Brightway adapter: Run distribution 2/2\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'default scenario': {'name': 'root',\n",
+       "  'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
+       "    'magnitude': 0.0,\n",
+       "    'multi_magnitude': [1.5785744795597512, 1.5705884323610946]}},\n",
+       "  'output': [{'unit': 'kilowatt_hour', 'magnitude': 1.0}],\n",
+       "  'children': [{'name': 'single_activity',\n",
+       "    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
+       "      'multi_magnitude': [1.5785744795597512, 1.5705884323610946]}},\n",
+       "    'output': [{'unit': 'kilowatt_hour', 'magnitude': 1.0}]}]}}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "execution_count": 2
+  },
+  {
+   "cell_type": "code",
    "source": [
+    "from enbios.bw2.MultiLCA_util import BaseStackedMultiLCA\n",
     "from enbios.bw2.brightway_experiment_adapter import BrightwayAdapter\n",
-    "from enbios.bw2.stacked_MultiLCA import StackedMultiLCA\n",
     "\n",
     "bw_adapter: BrightwayAdapter = exp.get_adapter_by_name(\"brightway-adapter\")\n",
     "# bw_adapter.lca_objects\n",
     "print(bw_adapter.raw_results)\n",
     "\n",
-    "multi_lca: list[StackedMultiLCA] = bw_adapter.lca_objects[\"default scenario\"]"
+    "multi_lca: list[BaseStackedMultiLCA] = bw_adapter.lca_objects[\"default scenario\"]"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T11:16:22.152067363Z",
-     "start_time": "2024-02-20T11:16:22.109126123Z"
+     "end_time": "2024-04-16T09:22:36.510884Z",
+     "start_time": "2024-04-16T09:22:36.506345Z"
     }
    },
    "id": "4b7ff60c2edf5ccb",
-   "execution_count": 3
-  },
-  {
-   "cell_type": "code",
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'default scenario': [array([[1.57857448]]), array([[1.57058843]])]}\n"
+     ]
+    },
+    {
      "data": {
-      "text/plain": "array([[1.57895888]])"
+      "text/plain": [
+       "[<enbios.bw2.MultiLCA_util.BaseStackedMultiLCA at 0x734be3a10710>,\n",
+       " <enbios.bw2.MultiLCA_util.BaseStackedMultiLCA at 0x734c51529d10>]"
+      ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "execution_count": 7
+  },
+  {
+   "cell_type": "code",
    "source": [
     "multi_lca[0].results"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T11:16:22.153205251Z",
-     "start_time": "2024-02-20T11:16:22.151767202Z"
+     "end_time": "2024-04-16T09:22:44.127294Z",
+     "start_time": "2024-04-16T09:22:44.119654Z"
     }
    },
    "id": "26e38ebc13710817",
-   "execution_count": 4
-  },
-  {
-   "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "[<enbios.bw2.stacked_MultiLCA.StackedMultiLCA at 0x7572bb117c70>,\n <enbios.bw2.stacked_MultiLCA.StackedMultiLCA at 0x7572bb116d70>]"
+      "text/plain": [
+       "array([[1.57857448]])"
+      ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "execution_count": 8
+  },
+  {
+   "cell_type": "code",
    "source": [
     "multi_lca"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-20T11:16:22.154168457Z",
-     "start_time": "2024-02-20T11:16:22.152045891Z"
+     "end_time": "2024-04-16T09:22:53.170077Z",
+     "start_time": "2024-04-16T09:22:53.166347Z"
     }
    },
    "id": "80c8ca0cdec7275f",
-   "execution_count": 5
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "cc83849f48a043a8"
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<enbios.bw2.MultiLCA_util.BaseStackedMultiLCA at 0x734be3a10710>,\n",
+       " <enbios.bw2.MultiLCA_util.BaseStackedMultiLCA at 0x734c51529d10>]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
   }
  ],
  "metadata": {
