allow extra result data

--- a/demos/intro.ipynb
+++ b/demos/intro.ipynb
@@ -15,8 +15,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:43:53.588239Z",
-     "start_time": "2024-04-22T07:43:51.674269Z"
+     "end_time": "2024-04-22T13:37:20.165834Z",
+     "start_time": "2024-04-22T13:37:18.286729Z"
     }
    },
    "outputs": [],
@@ -39,8 +39,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:43:53.694607Z",
-     "start_time": "2024-04-22T07:43:53.589576Z"
+     "end_time": "2024-04-22T13:37:20.260356Z",
+     "start_time": "2024-04-22T13:37:20.167300Z"
     }
    },
    "source": [
@@ -99,8 +99,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:43:53.709588Z",
-     "start_time": "2024-04-22T07:43:53.695565Z"
+     "end_time": "2024-04-22T13:37:20.272383Z",
+     "start_time": "2024-04-22T13:37:20.261598Z"
     }
    },
    "source": [
@@ -126,8 +126,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:43:54.171700Z",
-     "start_time": "2024-04-22T07:43:53.920115Z"
+     "end_time": "2024-04-22T13:37:20.558811Z",
+     "start_time": "2024-04-22T13:37:20.273679Z"
     }
    },
    "source": [
@@ -162,8 +162,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:43:54.871665Z",
-     "start_time": "2024-04-22T07:43:54.868257Z"
+     "end_time": "2024-04-22T13:37:20.562929Z",
+     "start_time": "2024-04-22T13:37:20.560240Z"
     }
    },
    "source": [
@@ -186,8 +186,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:43:55.511642Z",
-     "start_time": "2024-04-22T07:43:55.507669Z"
+     "end_time": "2024-04-22T13:37:20.578365Z",
+     "start_time": "2024-04-22T13:37:20.563812Z"
     }
    },
    "source": [
@@ -230,8 +230,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:43:56.166667Z",
-     "start_time": "2024-04-22T07:43:56.163987Z"
+     "end_time": "2024-04-22T13:37:20.584152Z",
+     "start_time": "2024-04-22T13:37:20.579374Z"
     }
    },
    "outputs": [],
@@ -241,8 +241,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:43:58.086666Z",
-     "start_time": "2024-04-22T07:43:58.082275Z"
+     "end_time": "2024-04-22T13:37:20.591608Z",
+     "start_time": "2024-04-22T13:37:20.585410Z"
     }
    },
    "source": [
@@ -256,12 +256,10 @@
     {
      "data": {
       "text/plain": [
-       "{'hazardous waste no LT': ('EDIP 2003 no LT',\n",
-       "  'land filling no LT',\n",
-       "  'hazardous waste no LT'),\n",
-       " 'photochemical oxidant formation potential: ecosystems (EOFP)': ('ReCiPe 2016 v1.03, midpoint (H)',\n",
-       "  'photochemical oxidant formation: terrestrial ecosystems',\n",
-       "  'photochemical oxidant formation potential: ecosystems (EOFP)')}"
+       "{'silver': ('EDIP 2003', 'non-renewable resources', 'silver'),\n",
+       " 'acidification: terrestrial no LT': ('ReCiPe 2016 v1.03, endpoint (H) no LT',\n",
+       "  'ecosystem quality no LT',\n",
+       "  'acidification: terrestrial no LT')}"
       ]
      },
      "execution_count": 8,
@@ -296,8 +294,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:43:58.838304Z",
-     "start_time": "2024-04-22T07:43:58.835585Z"
+     "end_time": "2024-04-22T13:37:20.598051Z",
+     "start_time": "2024-04-22T13:37:20.592707Z"
     }
    },
    "outputs": [],
@@ -307,8 +305,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:43:59.880898Z",
-     "start_time": "2024-04-22T07:43:59.874983Z"
+     "end_time": "2024-04-22T13:37:20.733495Z",
+     "start_time": "2024-04-22T13:37:20.729026Z"
     }
    },
    "source": [
@@ -365,8 +363,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:44:02.161674Z",
-     "start_time": "2024-04-22T07:44:01.032558Z"
+     "end_time": "2024-04-22T13:37:22.203788Z",
+     "start_time": "2024-04-22T13:37:21.096690Z"
     }
    },
    "source": [
@@ -380,8 +378,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:44:02.165527Z",
-     "start_time": "2024-04-22T07:44:02.162788Z"
+     "end_time": "2024-04-22T13:37:22.207768Z",
+     "start_time": "2024-04-22T13:37:22.204815Z"
     }
    },
    "source": [
@@ -420,8 +418,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:22:55.768246Z",
-     "start_time": "2024-04-22T07:22:24.980666Z"
+     "end_time": "2024-04-22T13:37:53.591535Z",
+     "start_time": "2024-04-22T13:37:24.960794Z"
     }
    },
    "source": [
@@ -438,7 +436,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-04-22 09:22:24,994 - ............demos.enbios.base - INFO - Running scenario 'default scenario'\n"
+      "2024-04-22 15:37:24,963 - ............demos.enbios.base - INFO - Running scenario 'default scenario'\n"
      ]
     }
    ],
@@ -456,13 +454,11 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:22:55.783903Z",
-     "start_time": "2024-04-22T07:22:55.774631Z"
+     "end_time": "2024-04-22T13:37:53.616223Z",
+     "start_time": "2024-04-22T13:37:53.593834Z"
     }
    },
-   "source": [
-    "results"
-   ],
+   "source": "results",
    "outputs": [
     {
      "data": {
@@ -473,18 +469,21 @@
        "   'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0035793235538536016},\n",
        "   'WCP': {'unit': 'cubic meter', 'magnitude': 0.0005971209633515382}},\n",
        "  'output': [{'unit': 'kilowatt_hour', 'magnitude': 4.0}],\n",
+       "  'factor': 1,\n",
        "  'children': [{'name': 'electricity production, wind, 1-3MW turbine, onshore',\n",
        "    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
        "      'magnitude': 0.04573083403096655},\n",
        "     'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0031983593461469605},\n",
        "     'WCP': {'unit': 'cubic meter', 'magnitude': 0.0004090798127341177}},\n",
-       "    'output': [{'unit': 'kilowatt_hour', 'magnitude': 3.0}]},\n",
+       "    'output': [{'unit': 'kilowatt_hour', 'magnitude': 3.0}],\n",
+       "    'bw_activity_code': 'ed3da88fc23311ee183e9ffd376de89b'},\n",
        "   {'name': 'electricity production, wind, 1-3MW turbine, offshore',\n",
        "    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
        "      'magnitude': 0.01702044825602208},\n",
        "     'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0003809642077066412},\n",
        "     'WCP': {'unit': 'cubic meter', 'magnitude': 0.00018804115061742048}},\n",
-       "    'output': [{'unit': 'kilowatt_hour', 'magnitude': 1.0}]}]}}"
+       "    'output': [{'unit': 'kilowatt_hour'}],\n",
+       "    'bw_activity_code': '6ebfe52dc3ef5b4d35bb603b03559023'}]}}"
       ]
      },
      "execution_count": 14,
@@ -632,8 +631,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:44:09.880965Z",
-     "start_time": "2024-04-22T07:44:09.803382Z"
+     "end_time": "2024-04-22T13:41:56.002048Z",
+     "start_time": "2024-04-22T13:41:55.915056Z"
     }
    },
    "source": [
@@ -655,12 +654,12 @@
        " 'electricity production, solar thermal parabolic trough, 50 MW' (kilowatt hour, ES, None)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 13
+   "execution_count": 15
   },
   {
    "cell_type": "code",
@@ -685,26 +684,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:44:10.502649Z",
-     "start_time": "2024-04-22T07:44:10.495493Z"
+     "end_time": "2024-04-22T13:41:56.117091Z",
+     "start_time": "2024-04-22T13:41:56.109726Z"
     }
    },
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 16
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:44:12.345168Z",
-     "start_time": "2024-04-22T07:44:11.137718Z"
+     "end_time": "2024-04-22T13:41:57.938765Z",
+     "start_time": "2024-04-22T13:41:56.794317Z"
     }
    },
    "source": [
     "hierarchy_experiment: Experiment = Experiment(hierarchy_raw_data)"
    ],
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -719,8 +718,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:44:58.078774Z",
-     "start_time": "2024-04-22T07:44:12.503444Z"
+     "end_time": "2024-04-22T13:42:37.059184Z",
+     "start_time": "2024-04-22T13:41:57.939753Z"
     }
    },
    "source": [
@@ -731,7 +730,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-04-22 09:44:12,504 - ............demos.enbios.base - INFO - Running scenario 'default scenario'\n"
+      "2024-04-22 15:41:57,940 - ............demos.enbios.base - INFO - Running scenario 'default scenario'\n"
      ]
     },
     {
@@ -743,67 +742,74 @@
        "   'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.016808962919060966},\n",
        "   'WCP': {'unit': 'cubic meter', 'magnitude': 0.0010633319876832354}},\n",
        "  'output': [{'unit': 'kilowatt_hour', 'magnitude': 6.0}],\n",
+       "  'factor': 1,\n",
        "  'children': [{'name': 'wind',\n",
        "    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
        "      'magnitude': 0.06275128228698862},\n",
        "     'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0035793235538536016},\n",
        "     'WCP': {'unit': 'cubic meter', 'magnitude': 0.0005971209633515382}},\n",
        "    'output': [{'unit': 'kilowatt_hour', 'magnitude': 4.0}],\n",
+       "    'factor': 1,\n",
        "    'children': [{'name': 'electricity production, wind, 1-3MW turbine, onshore',\n",
        "      'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
        "        'magnitude': 0.04573083403096655},\n",
        "       'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0031983593461469605},\n",
        "       'WCP': {'unit': 'cubic meter', 'magnitude': 0.0004090798127341177}},\n",
-       "      'output': [{'unit': 'kilowatt_hour', 'magnitude': 3.0}]},\n",
+       "      'output': [{'unit': 'kilowatt_hour', 'magnitude': 3.0}],\n",
+       "      'bw_activity_code': 'ed3da88fc23311ee183e9ffd376de89b'},\n",
        "     {'name': 'electricity production, wind, 1-3MW turbine, offshore',\n",
        "      'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
        "        'magnitude': 0.01702044825602208},\n",
        "       'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.0003809642077066412},\n",
        "       'WCP': {'unit': 'cubic meter', 'magnitude': 0.00018804115061742048}},\n",
-       "      'output': [{'unit': 'kilowatt_hour', 'magnitude': 1.0}]}]},\n",
+       "      'output': [{'unit': 'kilowatt_hour'}],\n",
+       "      'bw_activity_code': '6ebfe52dc3ef5b4d35bb603b03559023'}]},\n",
        "   {'name': 'solar',\n",
        "    'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
        "      'magnitude': 0.10240077067913281},\n",
        "     'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.013229639365207364},\n",
        "     'WCP': {'unit': 'cubic meter', 'magnitude': 0.00046621102433169726}},\n",
        "    'output': [{'unit': 'kilowatt_hour', 'magnitude': 2.0}],\n",
+       "    'factor': 1,\n",
        "    'children': [{'name': 'electricity production, solar tower power plant, 20 MW',\n",
        "      'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
        "        'magnitude': 0.04820458190235993},\n",
        "       'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.006941032046087661},\n",
        "       'WCP': {'unit': 'cubic meter', 'magnitude': 0.00021147976571951987}},\n",
-       "      'output': [{'unit': 'kilowatt_hour', 'magnitude': 1.0}]},\n",
+       "      'output': [{'unit': 'kilowatt_hour'}],\n",
+       "      'bw_activity_code': 'f2700b2ffcb6b32143a6f95d9cca1721'},\n",
        "     {'name': 'electricity production, solar thermal parabolic trough, 50 MW',\n",
        "      'results': {'GWP1000': {'unit': 'kg CO2-Eq',\n",
        "        'magnitude': 0.05419618877677287},\n",
        "       'LOP': {'unit': 'm2*a crop-Eq', 'magnitude': 0.006288607319119703},\n",
        "       'WCP': {'unit': 'cubic meter', 'magnitude': 0.00025473125861217737}},\n",
-       "      'output': [{'unit': 'kilowatt_hour', 'magnitude': 1.0}]}]}]}}"
+       "      'output': [{'unit': 'kilowatt_hour'}],\n",
+       "      'bw_activity_code': '19040cdacdbf038e2f6ad59814f7a9ed'}]}]}}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T07:44:58.092545Z",
-     "start_time": "2024-04-22T07:44:58.080806Z"
+     "end_time": "2024-04-22T13:42:37.077623Z",
+     "start_time": "2024-04-22T13:42:37.065708Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# optional storing, to use it in other notebooks\n",
-    "# import pickle\n",
-    "# \n",
-    "# pickle.dump(hierarchy_experiment,open(\"exp.pickle\", \"bw\"))"
+    "import pickle\n",
+    "\n",
+    "pickle.dump(hierarchy_experiment, open(\"exp.pickle\", \"bw\"))"
    ],
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 19
   },
   {
    "cell_type": "code",
