fix, scenario node dumping... (include default and unset for node outputs)
do a lot of csv testing

--- a/demos/intro.ipynb
+++ b/demos/intro.ipynb
@@ -15,8 +15,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-22T13:37:20.165834Z",
-     "start_time": "2024-04-22T13:37:18.286729Z"
+     "end_time": "2024-04-23T07:03:30.128323Z",
+     "start_time": "2024-04-23T07:03:27.937654Z"
     }
    },
    "outputs": [],
@@ -39,8 +39,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T13:37:20.260356Z",
-     "start_time": "2024-04-22T13:37:20.167300Z"
+     "end_time": "2024-04-23T07:03:30.269160Z",
+     "start_time": "2024-04-23T07:03:30.129351Z"
     }
    },
    "source": [
@@ -99,8 +99,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T13:37:20.272383Z",
-     "start_time": "2024-04-22T13:37:20.261598Z"
+     "end_time": "2024-04-23T07:03:30.307200Z",
+     "start_time": "2024-04-23T07:03:30.293713Z"
     }
    },
    "source": [
@@ -126,8 +126,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T13:37:20.558811Z",
-     "start_time": "2024-04-22T13:37:20.273679Z"
+     "end_time": "2024-04-23T07:03:37.200352Z",
+     "start_time": "2024-04-23T07:03:36.893822Z"
     }
    },
    "source": [
@@ -162,8 +162,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T13:37:20.562929Z",
-     "start_time": "2024-04-22T13:37:20.560240Z"
+     "end_time": "2024-04-23T07:03:39.040562Z",
+     "start_time": "2024-04-23T07:03:39.037496Z"
     }
    },
    "source": [
@@ -186,8 +186,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T13:37:20.578365Z",
-     "start_time": "2024-04-22T13:37:20.563812Z"
+     "end_time": "2024-04-23T07:03:40.626346Z",
+     "start_time": "2024-04-23T07:03:40.622347Z"
     }
    },
    "source": [
@@ -230,8 +230,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-22T13:37:20.584152Z",
-     "start_time": "2024-04-22T13:37:20.579374Z"
+     "end_time": "2024-04-23T07:03:41.668343Z",
+     "start_time": "2024-04-23T07:03:41.665825Z"
     }
    },
    "outputs": [],
@@ -294,19 +294,19 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-22T13:37:20.598051Z",
-     "start_time": "2024-04-22T13:37:20.592707Z"
+     "end_time": "2024-04-23T07:03:45.809767Z",
+     "start_time": "2024-04-23T07:03:45.807168Z"
     }
    },
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 8
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T13:37:20.733495Z",
-     "start_time": "2024-04-22T13:37:20.729026Z"
+     "end_time": "2024-04-23T07:03:48.892141Z",
+     "start_time": "2024-04-23T07:03:48.887433Z"
     }
    },
    "source": [
@@ -352,12 +352,12 @@
        "    'adapter': 'brightway-adapter'}]}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 9
   },
   {
    "cell_type": "code",
@@ -631,8 +631,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T13:41:56.002048Z",
-     "start_time": "2024-04-22T13:41:55.915056Z"
+     "end_time": "2024-04-23T07:03:57.902263Z",
+     "start_time": "2024-04-23T07:03:57.799337Z"
     }
    },
    "source": [
@@ -654,12 +654,12 @@
        " 'electricity production, solar thermal parabolic trough, 50 MW' (kilowatt hour, ES, None)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 15
+   "execution_count": 10
   },
   {
    "cell_type": "code",
@@ -684,26 +684,78 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-22T13:41:56.117091Z",
-     "start_time": "2024-04-22T13:41:56.109726Z"
+     "end_time": "2024-04-23T07:03:59.772955Z",
+     "start_time": "2024-04-23T07:03:59.768156Z"
     }
    },
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-04-23T07:04:10.260592Z",
+     "start_time": "2024-04-23T07:04:10.256988Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "hierarchy_raw_data",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'adapters': [{'adapter_name': 'brightway-adapter',\n",
+       "   'config': {'bw_project': 'ecoinvent_391'},\n",
+       "   'methods': {'GWP1000': ('ReCiPe 2016 v1.03, midpoint (H)',\n",
+       "     'climate change',\n",
+       "     'global warming potential (GWP1000)'),\n",
+       "    'LOP': ('ReCiPe 2016 v1.03, midpoint (E)',\n",
+       "     'land use',\n",
+       "     'agricultural land occupation (LOP)'),\n",
+       "    'WCP': ('ReCiPe 2016 v1.03, midpoint (E)',\n",
+       "     'water use',\n",
+       "     'water consumption potential (WCP)')}}],\n",
+       " 'hierarchy': {'name': 'root',\n",
+       "  'aggregator': 'sum',\n",
+       "  'children': [{'name': 'wind',\n",
+       "    'aggregator': 'sum',\n",
+       "    'children': [{'name': 'electricity production, wind, 1-3MW turbine, onshore',\n",
+       "      'adapter': 'brightway-adapter',\n",
+       "      'config': {'code': 'ed3da88fc23311ee183e9ffd376de89b',\n",
+       "       'default_output': {'unit': 'kilowatt_hour', 'magnitude': 3}}},\n",
+       "     {'name': 'electricity production, wind, 1-3MW turbine, offshore',\n",
+       "      'adapter': 'brightway-adapter',\n",
+       "      'config': {'code': '6ebfe52dc3ef5b4d35bb603b03559023'}}]},\n",
+       "   {'name': 'solar',\n",
+       "    'aggregator': 'sum',\n",
+       "    'children': [{'name': 'electricity production, solar tower power plant, 20 MW',\n",
+       "      'adapter': 'bw',\n",
+       "      'config': {'code': 'f2700b2ffcb6b32143a6f95d9cca1721'}},\n",
+       "     {'name': 'electricity production, solar thermal parabolic trough, 50 MW',\n",
+       "      'adapter': 'bw',\n",
+       "      'config': {'code': '19040cdacdbf038e2f6ad59814f7a9ed'}}]}]}}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-22T13:41:57.938765Z",
-     "start_time": "2024-04-22T13:41:56.794317Z"
+     "end_time": "2024-04-23T07:04:04.592860Z",
+     "start_time": "2024-04-23T07:04:02.855005Z"
     }
    },
    "source": [
     "hierarchy_experiment: Experiment = Experiment(hierarchy_raw_data)"
    ],
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 12
   },
   {
    "cell_type": "markdown",
