more demos... fixes for updating...

--- a/demos/csv_export.ipynb
+++ b/demos/csv_export.ipynb
@@ -726,13 +726,15 @@
    },
    "cell_type": "code",
    "source": [
-    "exp.results_to_csv(csv_file_destination,\n",
-    "                   scenarios=\"scenario 2\",\n",
-    "                   repeat_parent_name=True,\n",
-    "                   level_names=[\"root\", \"tech\", \"activity\"],\n",
-    "                   include_method_units=False,\n",
-    "                   include_extras=False,\n",
-    "                   include_output=False)\n",
+    "exp.results_to_csv(\n",
+    "    csv_file_destination,\n",
+    "    scenarios=\"scenario 2\",\n",
+    "    repeat_parent_name=True,\n",
+    "    level_names=[\"root\", \"tech\", \"activity\"],\n",
+    "    include_method_units=False,\n",
+    "    include_extras=False,\n",
+    "    include_output=False,\n",
+    ")\n",
     "pandas.read_csv(csv_file_destination).fillna(\"\")"
    ],
    "id": "907588964e17e380",
@@ -905,9 +907,7 @@
     "alt_hierarchy = {\n",
     "    \"name\": \"root\",\n",
     "    \"agregator\": \"sum\",\n",
-    "    \"children\": [\n",
-    "        {\"name\": node} for node in exp.structural_nodes_names\n",
-    "    ]\n",
+    "    \"children\": [{\"name\": node} for node in exp.structural_nodes_names],\n",
     "}\n",
     "alt_hierarchy"
    ],
@@ -940,7 +940,9 @@
    },
    "cell_type": "code",
    "source": [
-    "exp.results_to_csv(csv_file_destination,flat_hierarchy=True, alternative_hierarchy=alt_hierarchy)\n",
+    "exp.results_to_csv(\n",
+    "    csv_file_destination, flat_hierarchy=True, alternative_hierarchy=alt_hierarchy\n",
+    ")\n",
     "pandas.read_csv(csv_file_destination).fillna(\"\")"
    ],
    "id": "e42642e381f13e86",
